--- a/index.html
+++ b/index.html
@@ -17,30 +17,50 @@
   </head>
   <body>
     <style>
-      .goog-te-combo {
-        /* Adjust the width and layout to make it more horizontal */
-        display: inline-block;
-        width: auto; /* Adjust the width as needed */
-        margin: 0;
-        padding: 0;
-      }
+  /* Resize and beautify the language select dropdown */
+  .goog-te-combo {
+    width: 130px; /* Adjust width */
+    height: 30px; /* Adjust height */
+    padding: 3px; /* Padding for better look */
+    font-size: 13px; /* Slightly smaller font */
+    border-radius: 4px; /* Rounded corners */
+    border: 1px solid #ddd; /* Light gray border */
+    background-color: #fff; /* White background */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    transition: background-color 0.3s ease; /* Smooth hover transition */
+  }
 
-      .goog-te-menu-frame {
-        /* Customize the dropdown menu appearance */
-        width: auto !important; /* Override default width */
-      }
+  /* Hover effect for the dropdown */
+  .goog-te-combo:hover {
+    background-color: #f0f0f0; /* Light hover background */
+    border-color: #ccc; /* Change border on hover */
+  }
 
-      .goog-te-menu2 {
-        /* Adjust menu layout if needed */
-        display: flex;
-        flex-direction: row;
-      }
+  /* Customize the dropdown menu appearance */
+  .goog-te-menu-frame {
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
 
-      .goog-te-menu2-item {
-        /* Style individual items */
-        display: inline-block;
-      }
-    </style>
+  /* Styling the dropdown options */
+  .goog-te-menu2 {
+    font-size: 12px;
+    padding: 8px;
+    background-color: #fff;
+  }
+
+  /* Style individual dropdown options */
+  .goog-te-menu2-item {
+    padding: 5px 10px;
+    border-bottom: 1px solid #eee;
+  }
+
+  /* Hover effect for dropdown options */
+  .goog-te-menu2-item:hover {
+    background-color: #f5f5f5;
+  }
+</style>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript">
@@ -56,7 +76,7 @@
     </script>
     <script
       type="text/javascript"
-      src="https://translate.google.com/translate_a/element.js?cb=googleTanslateElementInit"
+      src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
     ></script>
   </body>
 </html>
