--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Mitra</title>
+    <meta name="theme-color" content="#0a2b6e" />
+    <meta name="description" content="Jobzee - Your ultimate platform for job search and career opportunities. Find your dream job or recruit top talent today!" />
+    <meta name="keywords" content="job search, career, hiring, employment, recruitment, jobs, Jobzee" />
+    <meta name="author" content="Jobzee Team" />
+    <meta property="og:title" content="Jobzee - Find Your Dream Job" />
+    <meta property="og:description" content="Discover exciting job opportunities and connect with employers on Jobzee. Start your career journey today!" />
+    <meta property="og:image" content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png" />
+    <meta property="og:url" content="https://jobzee-five.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Jobzee - Find Your Dream Job" />
+    <meta name="twitter:description" content="Your ultimate platform for job search and career opportunities. Discover now!" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png" />
     <link
       rel="shortcut icon"
       href="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725363580/businessman_eljmnv.png"
@@ -12,55 +23,11 @@
     />
     <link
       rel="apple-touch-icon"
-      href="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725363580/businessman_eljmnv.png"
+      href="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png"
     />
+    <title>Jobzee</title>
   </head>
   <body>
-    <style>
-  /* Resize and beautify the language select dropdown */
-  .goog-te-combo {
-    width: 130px; /* Adjust width */
-    height: 30px; /* Adjust height */
-    padding: 3px; /* Padding for better look */
-    font-size: 13px; /* Slightly smaller font */
-    border-radius: 4px; /* Rounded corners */
-    border: 1px solid #ddd; /* Light gray border */
-    background-color: #fff; /* White background */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-    transition: background-color 0.3s ease; /* Smooth hover transition */
-  }
-
-  /* Hover effect for the dropdown */
-  .goog-te-combo:hover {
-    background-color: #f0f0f0; /* Light hover background */
-    border-color: #ccc; /* Change border on hover */
-  }
-
-  /* Customize the dropdown menu appearance */
-  .goog-te-menu-frame {
-    border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  /* Styling the dropdown options */
-  .goog-te-menu2 {
-    font-size: 12px;
-    padding: 8px;
-    background-color: #fff;
-  }
-
-  /* Style individual dropdown options */
-  .goog-te-menu2-item {
-    padding: 5px 10px;
-    border-bottom: 1px solid #eee;
-  }
-
-  /* Hover effect for dropdown options */
-  .goog-te-menu2-item:hover {
-    background-color: #f5f5f5;
-  }
-</style>
-
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
