Refactor SEO metadata in index.html for improved readability and consistency

--- a/index.html
+++ b/index.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0a2b6e" />
-    <meta name="description" content="Jobzee - Your ultimate platform for job search and career opportunities. Find your dream job or recruit top talent today!" />
-    <meta name="keywords" content="job search, career, hiring, employment, recruitment, jobs, Jobzee" />
+    <meta
+      name="description"
+      content="Jobzee - Your ultimate platform for job search and career opportunities. Find your dream job or recruit top talent today!"
+    />
+    <meta
+      name="keywords"
+      content="job search, career, hiring, employment, recruitment, jobs, Jobzee"
+    />
     <meta name="author" content="Jobzee Team" />
     <meta property="og:title" content="Jobzee - Find Your Dream Job" />
-    <meta property="og:description" content="Discover exciting job opportunities and connect with employers on Jobzee. Start your career journey today!" />
-    <meta property="og:image" content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png" />
+    <meta
+      property="og:description"
+      content="Discover exciting job opportunities and connect with employers on Jobzee. Start your career journey today!"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png"
+    />
     <meta property="og:url" content="https://jobzee-five.vercel.app" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jobzee - Find Your Dream Job" />
-    <meta name="twitter:description" content="Your ultimate platform for job search and career opportunities. Discover now!" />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png" />
+    <meta
+      name="twitter:description"
+      content="Your ultimate platform for job search and career opportunities. Discover now!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725420696/job-mitra-high-resolution-logo-transparent_wchtjo.png"
+    />
     <link
       rel="shortcut icon"
       href="https://res.cloudinary.com/dlf6jkg3d/image/upload/v1725363580/businessman_eljmnv.png"
